# diploma11

./: ..gitignore  .dockerignore  .env  .gitignore  Docker-compose.yaml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy_main.yaml  push_expect_main.yaml
bot/: admin.py  models.py  serializers.py  urls.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py
bot/tg/: client.py  schemas.py
core/: admin.py  apps.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
deploy/: .env  docker-compose.yaml
goals/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_alter_goalcategory_created_and_more.py  0003_add_goals_model.py  0004_add_comment_model.py  0005_board_goalcategory_board_boardparticipant.py  0006_create_new_objects.py  0007_alter_goalcategory_board.py
tests/: conftest.py  factories.py  simple_test.py
tests/test_board/: test_boards.py
tests/test_category/: test_category.py  test_category_create.py
tests/test_comment/: test_comment_create.py
tests/test_core/: factories.py  test_signup.py
tests/test_goal/: test_goal_create.py  test_goals.py
todolist/: settings.py  urls.py
